# gemini-client-rs

./: .env.example  Cargo.toml  README.md
examples/: audio_in_audio_out.rs  audio_in_text_out.rs  live_audio_in_audio_out.rs  live_audio_in_text_out.rs  live_text_in_text_out.rs  rest_stream_function_text_in_text_out.rs  rest_text_in_text_out.rs  text_in_text_out.rs
examples/common/: utils.rs
src/: lib.rs
src/v1beta/: live.rs  mod.rs  rest.rs
tests/: config.rs  generate_content.rs  messages.rs  rest.rs  stream_content.rs
